--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="header">Eddi's library
             <button class="add_book">Add book</button>
         </div>
-        <div class="library"></div>
+        <div class="library">
+        </div>
     </div>
     
 </body>
